// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Form.Checkbox and radio Checkbox e radio 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <form
      className="m-3"
    >
      <fieldset>
        <legend>
          Checkbox
        </legend>
        <div
          className="form-check"
        >
          <input
            className="form-control"
            id="checkbox1"
            onBlur={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <label
            className="form-check-label"
            htmlFor="checkbox1"
          >
            Checkbox di esempio
          </label>
        </div>
      </fieldset>
      <fieldset>
        <legend>
          Radio
        </legend>
        <div
          className="form-check"
        >
          <input
            className="form-control"
            defaultChecked={true}
            id="radio1"
            name="gruppo1"
            onBlur={[Function]}
            onFocus={[Function]}
            type="radio"
          />
          <label
            className="form-check-label"
            htmlFor="radio1"
          >
            Radio di esempio 1
          </label>
        </div>
        <div
          className="form-check"
        >
          <input
            className="form-control"
            id="radio2"
            name="gruppo1"
            onBlur={[Function]}
            onFocus={[Function]}
            type="radio"
          />
          <label
            className="form-check-label"
            htmlFor="radio2"
          >
            Radio di esempio 2
          </label>
        </div>
      </fieldset>
    </form>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Checkbox and radio Disabilitato 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <fieldset>
        <legend>
          Checkbox
        </legend>
        <form
          className="m-3"
        >
          <div
            className="form-check"
          >
            <input
              className="form-control"
              disabled={true}
              id="checkbox1"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="checkbox1"
            >
              Checkbox disabilitato non selezionato
            </label>
          </div>
          <div
            className="form-check"
          >
            <input
              className="form-control"
              defaultChecked={true}
              disabled={true}
              id="checkbox2"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="checkbox2"
            >
              Checkbox disabilitato selezionato
            </label>
          </div>
        </form>
      </fieldset>
      <fieldset>
        <legend>
          Radio
        </legend>
        <form
          className="m-3"
        >
          <div
            className="form-check"
          >
            <input
              className="form-control"
              defaultChecked={true}
              disabled={true}
              id="radio1"
              name="gruppo1"
              onBlur={[Function]}
              onFocus={[Function]}
              type="radio"
            />
            <label
              className="form-check-label"
              htmlFor="radio1"
            >
              Opzione disabilitata selezionata
            </label>
          </div>
          <div
            className="form-check"
          >
            <input
              className="form-control"
              disabled={true}
              id="radio2"
              name="gruppo1"
              onBlur={[Function]}
              onFocus={[Function]}
              type="radio"
            />
            <label
              className="form-check-label"
              htmlFor="radio2"
            >
              Opzione disabilitata non selezionata
            </label>
          </div>
        </form>
      </fieldset>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Checkbox and radio Gruppi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <div
        className="m-5 row"
      >
        <div
          className="col-md-5"
        >
          <fieldset>
            <legend>
              Checkbox
            </legend>
            <form
              className=""
            >
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  defaultChecked={true}
                  id="checkbox1"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="checkbox1"
                >
                  Checkbox selezionato
                </label>
              </div>
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  id="checkbox2"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="checkbox2"
                >
                  Checkbox non selezionato
                </label>
              </div>
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  disabled={true}
                  id="checkbox3"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="checkbox3"
                >
                  Checkbox disabilitato non selezionato
                </label>
              </div>
            </form>
          </fieldset>
        </div>
        <div
          className="col-md-2"
        />
        <div
          className="col-md-5"
        >
          <fieldset>
            <legend>
              Checkbox
            </legend>
            <form
              className=""
            >
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  defaultChecked={true}
                  id="checkbox4"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="checkbox4"
                >
                  Checkbox selezionato
                </label>
                <small
                  className="form-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
                </small>
              </div>
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  id="checkbox5"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="checkbox5"
                >
                  Checkbox non selezionato
                </label>
                <small
                  className="form-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
                </small>
              </div>
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  disabled={true}
                  id="checkbox6"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="checkbox6"
                >
                  Checkbox disabilitato non selezionato
                </label>
                <small
                  className="form-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
                </small>
              </div>
            </form>
          </fieldset>
        </div>
      </div>
      <div
        className="m-5 row"
      >
        <div
          className="col-md-5"
        >
          <fieldset>
            <legend>
              Radio
            </legend>
            <form
              className=""
            >
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  defaultChecked={true}
                  id="radio1"
                  name="group1"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="radio"
                />
                <label
                  className="form-check-label"
                  htmlFor="radio1"
                >
                  Opzione 1
                </label>
              </div>
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  id="radio2"
                  name="group1"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="radio"
                />
                <label
                  className="form-check-label"
                  htmlFor="radio2"
                >
                  Opzione 2
                </label>
              </div>
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  disabled={true}
                  id="radio3"
                  name="group1"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="radio"
                />
                <label
                  className="form-check-label"
                  htmlFor="radio3"
                >
                  Opzione 3
                </label>
              </div>
            </form>
          </fieldset>
        </div>
        <div
          className="col-md-2"
        />
        <div
          className="col-md-5"
        >
          <fieldset>
            <legend>
              Radio
            </legend>
            <form
              className=""
            >
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  defaultChecked={true}
                  id="radio4"
                  name="group2"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="radio"
                />
                <label
                  className="form-check-label"
                  htmlFor="radio4"
                >
                  Opzione 1
                </label>
                <small
                  className="form-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
                </small>
              </div>
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  id="radio5"
                  name="group2"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="radio"
                />
                <label
                  className="form-check-label"
                  htmlFor="radio5"
                >
                  Opzione 2
                </label>
                <small
                  className="form-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
                </small>
              </div>
              <div
                className="form-check-group form-check"
              >
                <input
                  className="form-control"
                  disabled={true}
                  id="radio6"
                  name="group2"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  type="radio"
                />
                <label
                  className="form-check-label"
                  htmlFor="radio6"
                >
                  Opzione 3
                </label>
                <small
                  className="form-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
                </small>
              </div>
            </form>
          </fieldset>
        </div>
      </div>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Checkbox and radio Inline 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <fieldset>
        <legend>
          Checkbox
        </legend>
        <form
          className="m-3"
        >
          <div
            className="form-check form-check-inline"
          >
            <input
              className="form-control"
              id="checkbox1"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="checkbox1"
            >
              Checkbox non selezionato
            </label>
          </div>
          <div
            className="form-check form-check-inline"
          >
            <input
              className="form-control"
              defaultChecked={true}
              id="checkbox2"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="checkbox2"
            >
              Checkbox selezionato
            </label>
          </div>
        </form>
      </fieldset>
      <fieldset>
        <legend>
          Radio
        </legend>
        <form
          className="m-3"
        >
          <div
            className="form-check form-check-inline"
          >
            <input
              className="form-control"
              defaultChecked={true}
              id="radio1"
              name="gruppo1"
              onBlur={[Function]}
              onFocus={[Function]}
              type="radio"
            />
            <label
              className="form-check-label"
              htmlFor="radio1"
            >
              Opzione 1
            </label>
          </div>
          <div
            className="form-check form-check-inline"
          >
            <input
              className="form-control"
              id="radio2"
              name="gruppo1"
              onBlur={[Function]}
              onFocus={[Function]}
              type="radio"
            />
            <label
              className="form-check-label"
              htmlFor="radio2"
            >
              Opzione 2
            </label>
          </div>
        </form>
      </fieldset>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Form Validation Example 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="form-group"
      >
        <input
          className="is-valid form-control"
          onBlur={[Function]}
          onFocus={[Function]}
          type="text"
          valid={true}
        />
        <label
          className=""
        >
          Valid Input
        </label>
        <small
          className="valid-feedback form-text text-muted"
        />
      </div>
      <div
        className="form-group"
      >
        <input
          className="is-invalid form-control"
          invalid={true}
          onBlur={[Function]}
          onFocus={[Function]}
          type="text"
        />
        <label
          className=""
        >
          Invalid Input
        </label>
        <small
          className="invalid-feedback form-text text-muted"
        />
      </div>
      <div
        className="form-group"
      >
        <input
          className="is-valid form-control"
          onBlur={[Function]}
          onFocus={[Function]}
          type="text"
          valid={true}
          value="Mario"
        />
        <label
          className="active"
        >
          First name
        </label>
        <small
          className="valid-feedback form-text text-muted"
        >
          Validated!
        </small>
      </div>
      <div
        className="form-group"
      >
        <input
          className="is-invalid form-control"
          invalid={true}
          onBlur={[Function]}
          onFocus={[Function]}
          type="text"
        />
        <label
          className=""
        >
          Username
        </label>
        <small
          className="invalid-feedback form-text text-muted"
        >
          Please choose a username.
        </small>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Area di testo 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="exampleFormControlTextarea1"
          onBlur={[Function]}
          onFocus={[Function]}
          rows="3"
          type="textarea"
        />
        <label
          className=""
          htmlFor="exampleFormControlTextarea1"
        >
          Esempio di area di testo
        </label>
        <small
          className=""
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Area di testo con segnaposto 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="exampleFormControlTextarea1"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Testo di esempio"
          rows="3"
          type="textarea"
        />
        <label
          className="active"
          htmlFor="exampleFormControlTextarea1"
        >
          Esempio di area di testo
        </label>
        <small
          className=""
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Disabilitato 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        disabled={true}
        id="exampleDisabled"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <label
        className=""
        htmlFor="exampleDisabled"
      >
        Contenuto disabilitato
      </label>
      <small
        className=""
      />
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Esempi di campi di input 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="exampleInputText"
          onBlur={[Function]}
          onFocus={[Function]}
          type="text"
        />
        <label
          className=""
          htmlFor="exampleInputText"
        >
          Campo di tipo testuale
        </label>
        <small
          className=""
        />
      </div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="exampleInputEmail"
          onBlur={[Function]}
          onFocus={[Function]}
          type="email"
        />
        <label
          className=""
          htmlFor="exampleInputEmail"
        >
          Campo di tipo email
        </label>
        <small
          className=""
        />
      </div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="exampleInputNumber"
          onBlur={[Function]}
          onFocus={[Function]}
          type="number"
        />
        <label
          className=""
          htmlFor="exampleInputNumber"
        >
          Campo di tipo numerico
        </label>
        <small
          className=""
        />
      </div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="exampleInputTel"
          onBlur={[Function]}
          onFocus={[Function]}
          type="tel"
        />
        <label
          className=""
          htmlFor="exampleInputTel"
        >
          Campo di tipo telefono
        </label>
        <small
          className=""
        />
      </div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="exampleInputTime"
          max="18:00"
          min="9:00"
          onBlur={[Function]}
          onFocus={[Function]}
          type="time"
        />
        <label
          className=""
          htmlFor="exampleInputTime"
        >
          Campo di tipo ora
        </label>
        <small
          className=""
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Input autocomplete 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className=" css-2b097c-container"
        id="autocomplete-regioni"
        onKeyDown={[Function]}
      >
        <div
          className="react-autocomplete__control css-yk16xz-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-autocomplete__value-container css-g1d714-ValueContainer"
          >
            <div
              className="react-autocomplete__placeholder css-1wa3eu0-placeholder"
            >
              Testo da cercare
            </div>
            <div
              style={
                Object {
                  "border": "1px dotted blue}",
                }
              }
            >
              <div
                className="css-b8ldur-Input"
              >
                <div
                  className="react-autocomplete__input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="react-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              className="react-autocomplete__indicator react-autocomplete__loading-indicator css-at12u2-loadingIndicator"
            >
              <span
                className="css-1yvy2vo-LoadingDot"
              />
              <span
                className="css-zoievk-LoadingDot"
              />
              <span
                className="css-x748d8-LoadingDot"
              />
            </div>
            <div
              aria-hidden="true"
              className="react-autocomplete__indicator react-autocomplete__dropdown-indicator css-tlfecz-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <span
                aria-hidden="true"
                style={
                  Object {
                    "padding": "0px 5px",
                  }
                }
              >
                <svg
                  className="icon icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <label
        className="sr-only"
        htmlFor="autocomplete-regioni"
      >
        Cerca nel sito
      </label>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Input con icona o bottoni 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="form-group"
      >
        <div
          className="input-group"
        >
          <div
            className="input-group-prepend"
          >
            <div
              className="input-group-text"
            >
              <svg
                className="icon icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 3.5a2.9 2.9 0 00-2.1-.9 3.1 3.1 0 00-2.2.9L4.6 15.2l-1 5.2 5.2-1L20.5 7.8a3 3 0 000-4.3zm-5.7 2.8l.7-.7 2.9 2.9-.7.7zm-.7.8l1.1 1-8.4 8.4-1.1-1.1zM5.7 18.3a.7.7 0 00-.6-.3l.3-1.5 2.1 2.1-1.5.3a.7.7 0 00-.3-.6zm2.9 0l-1.1-1.1 8.4-8.4 1 1.1zM19.8 7.1l-.7.7-2.9-2.9.7-.7a2.2 2.2 0 011.5-.6 2 2 0 011.4.6 2.1 2.1 0 010 2.9z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <label
            className=""
            htmlFor="input-group-1"
          >
            Con Etichetta
          </label>
          <input
            className="form-control"
            id="input-group-1"
            name="input-group-1"
            onBlur={[Function]}
            onFocus={[Function]}
            type="text"
          />
          <div
            className="input-group-append"
          >
            <button
              className="btn"
              id="button-1"
              type="button"
            >
              Invio
            </button>
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <div
          className="input-group"
        >
          <div
            className="input-group-prepend"
          >
            <div
              className="input-group-text"
            >
              <svg
                className="icon icon-danger icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 3.5a2.9 2.9 0 00-2.1-.9 3.1 3.1 0 00-2.2.9L4.6 15.2l-1 5.2 5.2-1L20.5 7.8a3 3 0 000-4.3zm-5.7 2.8l.7-.7 2.9 2.9-.7.7zm-.7.8l1.1 1-8.4 8.4-1.1-1.1zM5.7 18.3a.7.7 0 00-.6-.3l.3-1.5 2.1 2.1-1.5.3a.7.7 0 00-.3-.6zm2.9 0l-1.1-1.1 8.4-8.4 1 1.1zM19.8 7.1l-.7.7-2.9-2.9.7-.7a2.2 2.2 0 011.5-.6 2 2 0 011.4.6 2.1 2.1 0 010 2.9z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <label
            className="active"
            htmlFor="input-group-2"
          >
            Con Etichetta e placeholder
          </label>
          <input
            className="form-control"
            id="input-group-2"
            name="input-group-2"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Lorem Ipsum"
            type="text"
          />
          <div
            className="input-group-append"
          >
            <button
              className="btn"
              id="button-2"
              type="button"
            >
              Invio
            </button>
          </div>
        </div>
      </div>
      <div
        className="form-group"
      >
        <div
          className="input-group"
        >
          <div
            className="input-group-prepend"
          >
            <div
              className="input-group-text"
            >
              <svg
                className="icon icon-primary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 3.5a2.9 2.9 0 00-2.1-.9 3.1 3.1 0 00-2.2.9L4.6 15.2l-1 5.2 5.2-1L20.5 7.8a3 3 0 000-4.3zm-5.7 2.8l.7-.7 2.9 2.9-.7.7zm-.7.8l1.1 1-8.4 8.4-1.1-1.1zM5.7 18.3a.7.7 0 00-.6-.3l.3-1.5 2.1 2.1-1.5.3a.7.7 0 00-.3-.6zm2.9 0l-1.1-1.1 8.4-8.4 1 1.1zM19.8 7.1l-.7.7-2.9-2.9.7-.7a2.2 2.2 0 011.5-.6 2 2 0 011.4.6 2.1 2.1 0 010 2.9z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <label
            className=""
            htmlFor="input-group-3"
          >
            Con Etichetta e bottone di tipo primary
          </label>
          <input
            className="form-control"
            id="input-group-3"
            name="input-group-3"
            onBlur={[Function]}
            onFocus={[Function]}
            type="text"
          />
          <div
            className="input-group-append"
          >
            <button
              className="btn btn-primary"
              id="button-3"
              type="button"
            >
              Invio
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Input password 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        id="exampleInputPassword"
        onBlur={[Function]}
        onFocus={[Function]}
        type="password"
      />
      <span
        aria-hidden="true"
        className="password-icon"
      >
        <svg
          className="icon password-icon-visible icon-sm sm"
          onClick={[Function]}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.8 11.5a11 11 0 00-19.6 0L2 12l.2.5a11 11 0 0019.6 0l.2-.5zm-9.8 6A9.8 9.8 0 013.1 12 9.8 9.8 0 0112 6.5a9.8 9.8 0 018.9 5.5 9.8 9.8 0 01-8.9 5.5zM12 8a4 4 0 104 4 4 4 0 00-4-4zm0 7a3 3 0 113-3 2.9 2.9 0 01-3 3z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <label
        className=""
        htmlFor="exampleInputPassword"
      >
        Password con label, placeholder e testo di aiuto
      </label>
      <small
        className=""
      >
        Inserisci almeno 8 caratteri e una lettera maiuscola
      </small>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Readonly 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        id="examplereadOnly"
        onBlur={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
      />
      <label
        className=""
        htmlFor="examplereadOnly"
      >
        Contenuto in sola lettura
      </label>
      <small
        className=""
      />
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Readonly normalizzato 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        id="exampleNormalized"
        onBlur={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
      />
      <label
        className=""
        htmlFor="exampleNormalized"
      >
        Contenuto in sola lettura
      </label>
      <small
        className=""
      />
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Input Utilizzo di placeholder e label 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="exampleLabel"
          onBlur={[Function]}
          onFocus={[Function]}
          type="text"
        />
        <label
          className=""
          htmlFor="exampleLabel"
        >
          Etichetta di esempio
        </label>
        <small
          className=""
        />
      </div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="examplePlaceholder"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Testo di esempio"
          type="text"
        />
        <label
          className="active"
          htmlFor="examplePlaceholder"
        >
          Etichetta di esempio
        </label>
        <small
          className=""
        />
      </div>
      <div
        className="form-group"
      >
        <input
          className="form-control"
          id="exampleinfoText"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Testo di esempio"
          type="text"
        />
        <label
          className="active"
          htmlFor="exampleinfoText"
        >
          Etichetta di esempio
        </label>
        <small
          className=""
        >
          Ulteriore testo informativo
        </small>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Select Select Multipla 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bootstrap-select-wrapper"
    >
      <label
        htmlFor="selectExampleMulti"
      >
        Etichetta di esempio
      </label>
      <div>
        <div
          className=" css-2b097c-container"
          id="selectExampleMulti"
          onKeyDown={[Function]}
        >
          <div
            className="react-select__control css-yk16xz-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="react-select__value-container react-select__value-container--is-multi css-g1d714-ValueContainer"
            >
              <div
                className="react-select__placeholder css-1wa3eu0-placeholder"
              >
                Scegli una opzione
              </div>
              <div
                className="css-b8ldur-Input"
              >
                <div
                  className="react-select__input"
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Scegli una opzione"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-7-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                className="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  className="icon"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.2 12h5.6a1 1 0 01.7 1.7L12 17.3l-3.5-3.6a1 1 0 01.7-1.7z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Select Select classica 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bootstrap-select-wrapper"
    >
      <label
        htmlFor="selectExampleClassic"
      >
        Etichetta di esempio
      </label>
      <div
        className=" css-2b097c-container"
        id="selectExampleClassic"
        onKeyDown={[Function]}
      >
        <div
          className="react-select__control css-yk16xz-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-select__value-container css-g1d714-ValueContainer"
          >
            <div
              className="react-select__placeholder css-1wa3eu0-placeholder"
            >
              Scegli una opzione
            </div>
            <div
              className="css-b8ldur-Input"
            >
              <div
                className="react-select__input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label="Scegli una opzione"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-3-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "label": "input",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              className="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.2 12h5.6a1 1 0 01.7 1.7L12 17.3l-3.5-3.6a1 1 0 01.7-1.7z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Select Select con gruppi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bootstrap-select-wrapper"
    >
      <label
        htmlFor="selectExampleGroups"
      >
        Etichetta di esempio
      </label>
      <div
        className=" css-2b097c-container"
        id="selectExampleGroups"
        onKeyDown={[Function]}
      >
        <div
          className="react-select__control css-yk16xz-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-select__value-container css-g1d714-ValueContainer"
          >
            <div
              className="react-select__placeholder css-1wa3eu0-placeholder"
            >
              Scegli una opzione
            </div>
            <div
              className="css-b8ldur-Input"
            >
              <div
                className="react-select__input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label="Scegli una opzione"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-8-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "label": "input",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              className="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.2 12h5.6a1 1 0 01.7 1.7L12 17.3l-3.5-3.6a1 1 0 01.7-1.7z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Select Select con reset 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bootstrap-select-wrapper"
    >
      <label
        htmlFor="selectExampleReset"
      >
        Etichetta di esempio
      </label>
      <div
        className=" css-2b097c-container"
        id="selectExampleReset"
        onKeyDown={[Function]}
      >
        <div
          className="react-select__control css-yk16xz-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-select__value-container css-g1d714-ValueContainer"
          >
            <div
              className="react-select__placeholder css-1wa3eu0-placeholder"
            >
              Scegli una opzione
            </div>
            <div
              className="css-b8ldur-Input"
            >
              <div
                className="react-select__input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label="Scegli una opzione"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-5-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "label": "input",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              className="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.2 12h5.6a1 1 0 01.7 1.7L12 17.3l-3.5-3.6a1 1 0 01.7-1.7z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Select Select con ricerca 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bootstrap-select-wrapper"
    >
      <label
        htmlFor="selectExampleSearch"
      >
        Etichetta di esempio
      </label>
      <div
        className=" css-2b097c-container"
        id="selectExampleSearch"
        onKeyDown={[Function]}
      >
        <div
          className="react-select__control css-yk16xz-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-select__value-container css-g1d714-ValueContainer"
          >
            <div
              className="react-select__placeholder css-1wa3eu0-placeholder"
            >
              Scegli una opzione
            </div>
            <div
              className="css-b8ldur-Input"
            >
              <div
                className="react-select__input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label="Scegli una opzione"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-6-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "label": "input",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              className="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.2 12h5.6a1 1 0 01.7 1.7L12 17.3l-3.5-3.6a1 1 0 01.7-1.7z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Select Select configurabile 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bootstrap-select-wrapper"
    >
      <label
        htmlFor="selectExampleInteractive"
      >
        Etichetta di esempio
      </label>
      <div>
        <div
          className=" css-2b097c-container"
          id="selectExampleInteractive"
          onKeyDown={[Function]}
        >
          <div
            className="react-select__control css-yk16xz-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="react-select__value-container css-g1d714-ValueContainer"
            >
              <div
                className="react-select__placeholder css-1wa3eu0-placeholder"
              >
                Scegli una opzione
              </div>
              <input
                aria-autocomplete="list"
                aria-label="Scegli una opzione"
                className="css-62g3xt-dummyInput"
                disabled={false}
                id="react-select-9-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                tabIndex="0"
                value=""
              />
            </div>
            <div
              className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                className="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  className="icon"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.2 12h5.6a1 1 0 01.7 1.7L12 17.3l-3.5-3.6a1 1 0 01.7-1.7z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Select Select disabilitata 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bootstrap-select-wrapper"
    >
      <label
        htmlFor="selectExampleDisabled"
      >
        Etichetta di esempio
      </label>
      <div
        className="react-select--is-disabled css-14jk2my-container"
        id="selectExampleDisabled"
        onKeyDown={[Function]}
      >
        <div
          className="react-select__control react-select__control--is-disabled css-1fhf3k1-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-select__value-container css-g1d714-ValueContainer"
          >
            <div
              className="react-select__placeholder css-1wa3eu0-placeholder"
            >
              Scegli una opzione
            </div>
            <div
              className="css-b8ldur-Input"
            >
              <div
                className="react-select__input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label="Scegli una opzione"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={true}
                  id="react-select-4-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "label": "input",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              className="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.2 12h5.6a1 1 0 01.7 1.7L12 17.3l-3.5-3.6a1 1 0 01.7-1.7z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Toggles Gruppi di Toggles 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="m-5 row"
    >
      <div
        className="col-md-5"
      >
        <form
          className=""
        >
          <div
            className="form-check-group form-check"
          >
            <div
              className="toggles"
            >
              <label
                className="form-check-label"
              >
                Toggle acceso
                <input
                  className="form-check-input"
                  defaultChecked={true}
                  type="checkbox"
                />
                <span
                  className="lever"
                />
              </label>
            </div>
          </div>
          <div
            className="form-check-group form-check"
          >
            <div
              className="toggles"
            >
              <label
                className="form-check-label"
              >
                Toggle spento
                <input
                  className="form-check-input"
                  type="checkbox"
                />
                <span
                  className="lever"
                />
              </label>
            </div>
          </div>
          <div
            className="form-check-group form-check"
          >
            <div
              className="toggles"
            >
              <label
                className="form-check-label"
              >
                Toggle disabilitato
                <input
                  className="form-check-input"
                  disabled={true}
                  type="checkbox"
                />
                <span
                  className="lever"
                />
              </label>
            </div>
          </div>
        </form>
      </div>
      <div
        className="col-md-2"
      />
      <div
        className="col-md-5"
      >
        <form
          className=""
        >
          <div
            className="form-check-group form-check"
          >
            <div
              className="toggles"
            >
              <label
                className="form-check-label"
              >
                Toggle acceso
                <input
                  className="form-check-input"
                  defaultChecked={true}
                  type="checkbox"
                />
                <span
                  className="lever"
                />
              </label>
            </div>
            <small
              className="form-text text-muted"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
            </small>
          </div>
          <div
            className="form-check-group form-check"
          >
            <div
              className="toggles"
            >
              <label
                className="form-check-label"
              >
                Toggle spento
                <input
                  className="form-check-input"
                  type="checkbox"
                />
                <span
                  className="lever"
                />
              </label>
            </div>
            <small
              className="form-text text-muted"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
            </small>
          </div>
          <div
            className="form-check-group form-check"
          >
            <div
              className="toggles"
            >
              <label
                className="form-check-label"
              >
                Toggle disabilitato
                <input
                  className="form-check-input"
                  disabled={true}
                  type="checkbox"
                />
                <span
                  className="lever"
                />
              </label>
            </div>
            <small
              className="form-text text-muted"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
            </small>
          </div>
        </form>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Toggles Toggles 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-sm-6"
      >
        <div
          className="m-3 form-check"
        >
          <div
            className="toggles"
          >
            <label
              className="form-check-label"
            >
              Label dell'interruttore 1
              <input
                className="form-check-input"
                disabled={false}
                type="checkbox"
              />
              <span
                className="lever"
              />
            </label>
          </div>
        </div>
      </div>
      <div
        className="col-sm-6"
      >
        <div
          className="m-3 form-check"
        >
          <div
            className="toggles"
          >
            <label
              className="form-check-label"
            >
              <span>
                Label dell'interruttore 2
              </span>
              <input
                className="form-check-input"
                defaultChecked={true}
                disabled={false}
                type="checkbox"
              />
              <span
                className="lever"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Form.Toggles Toggles Disabilitate 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-sm-6"
      >
        <div
          className="m-3 form-check"
        >
          <div
            className="toggles"
          >
            <label
              className="form-check-label"
            >
              Label dell'interruttore 1
              <input
                className="form-check-input"
                disabled={true}
                type="checkbox"
              />
              <span
                className="lever"
              />
            </label>
          </div>
        </div>
      </div>
      <div
        className="col-sm-6"
      >
        <div
          className="m-3 form-check"
        >
          <div
            className="toggles"
          >
            <label
              className="form-check-label"
            >
              <span>
                Label dell'interruttore 2
              </span>
              <input
                className="form-check-input"
                defaultChecked={true}
                disabled={true}
                type="checkbox"
              />
              <span
                className="lever"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
